2007-07-27  mefyl  <mefyl@lrde.epita.fr>

	Improve primitive-generation macros. Add list primitives.
	* src/object/primitives.hh: Macro now can act whether on Urbi object,
          whether on C++ values.
	* src/object/float-class.cc: Use new macros.
	* src/object/list-class.cc: Add head, tail, front and back primitives.

2007-07-27  mefyl  <mefyl@lrde.epita.fr>

	Generalize and document primitive-generation macros.
	* src/object/atom.hh: Add an access to the traits, for macros.
	* src/object/primitives.hh: Add generic macros for
          primitives generation,.
	* src/object/float-class.cc: Remove float-dedicated macros
          and use generic ones.
	* src/object/list-class.cc: Use macros.

2007-07-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix minor problems in UrbiException.
	* src/object/urbi-exception.cc: Aesthetic change.
	* src/object/urbi-exception.hh:
        Remove superfluous prototype specification.

2007-07-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Add UrbiException class, handle some maths errors.
	* src/object/Makefile.am: Add urbi-exception to libobject sources.
	* src/object/float-class.cc: Handle /0 and %0 errors.
	* src/object/fwd.hh: Add UrbiException.
	* src/object/urbi-exception.cc: New.
	* src/object/urbi-exception.hh: New.

2007-07-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Split primitices.cc.
	* src/object/Makefile.am: Add new files to libobject sources.
	* src/object/code-class.cc: New.
	* src/object/code-class.hh: New.
	* src/object/context-class.cc: New.
	* src/object/context-class.hh: New.
	* src/object/float-class.cc: New.
	* src/object/float-class.hh: New.
	* src/object/integer-class.cc: New.
	* src/object/integer-class.hh: New.
	* src/object/list-class.cc: New.
	* src/object/list-class.hh: New.
	* src/object/object-class.cc: New.
	* src/object/object-class.hh: New.
	* src/object/object.hxx: Call root_classes_initialize function.
	* src/object/primitive-class.cc: New.
	* src/object/primitive-class.hh: New.