@@ -1,3 +1,9 @@
+2007-07-28  Benoit Sigoure  <tsuna@lrde.epita.fr>
+
+	Remove dead code.
+	* src/uconnection.cc: Remove all the hunks between #if 0 ... #endif.
+	* src/userver.cc: Aesthetic change.
+
 2007-07-27  mefyl  <mefyl@lrde.epita.fr>
 
 	Improve primitive-generation macros. Add list primitives.
